.provarCaches/00D410000011HE0EAM/objects/rstkf__syvattxn__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_syvattxn</customHelpPage>
    <description>syvattxn__c</description>
    <fields>
        <fullName>BF_Transaction_Source__c</fullName>
        <formula>IF(rstkf__syvattxn_apinvdist__r.rstkf__apinvdist_apinvline__c = null, &quot;Normal&quot;,
IF (text(rstkf__syvattxn_apinvdist__r.rstkf__apinvdist_drcrind__c) &lt;&gt; text( rstkf__syvattxn_apinvdist__r.rstkf__apinvdist_apinvline__r.rstkf__apinvline_drcrind__c) , &quot;Reverse&quot; , &quot;Normal&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BF Transaction Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BF_VAT_Amount__c</fullName>
        <formula>ABS( rstkf__syvattxn_vatamount__c )
*IF(rstkf__syvattxn_arinvdist__c = null, 1, IF(rstkf__syvattxn_arinvdist__r.rstkf__arinvdist_drcrind__c = &apos;Credit&apos;,1,-1))
*IF(rstkf__syvattxn_apinvdist__c = null, 1, IF(TEXT(rstkf__syvattxn_apinvdist__r.rstkf__apinvdist_drcrind__c) = &apos;Credit&apos;,-1,1))
*IF( BF_Transaction_Source__c = &quot;Reverse&quot;,-1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BF VAT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BF_VAT_Declaration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BF_VAT_Declaration</label>
        <referenceTo>BF_VAT_Declaration__c</referenceTo>
        <relationshipLabel>VAT Transaction</relationshipLabel>
        <relationshipName>VAT_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BF_VAT_base_amount__c</fullName>
        <formula>IF( OR
	(
		rstkf__syvattxn_vatpct__c = 0, rstkf__syvattxn_vatclass__c = null),

	ABS(rstkf__syvattxn_txnamount__c),

IF(
( Round(ROUND( (ABS(rstkf__syvattxn_txnamount__c) * rstkf__syvattxn_vatpct__c)/(100+ rstkf__syvattxn_vatpct__c ),3),2)= ABS(rstkf__syvattxn_vatamount__c)),

ABS(rstkf__syvattxn_txnamount__c) - ABS(rstkf__syvattxn_vatamount__c),

((ABS(rstkf__syvattxn_vatamount__c) / rstkf__syvattxn_vatpct__c)*(100+ rstkf__syvattxn_vatpct__c )-ABS(rstkf__syvattxn_vatamount__c))
))
*IF(rstkf__syvattxn_arinvdist__c = null, 1, IF(rstkf__syvattxn_arinvdist__r.rstkf__arinvdist_drcrind__c = &apos;Credit&apos;,1,-1))
*IF(rstkf__syvattxn_apinvdist__c = null, 1, IF(TEXT(rstkf__syvattxn_apinvdist__r.rstkf__apinvdist_drcrind__c) = &apos;Credit&apos;,-1,1))
*IF( BF_Transaction_Source__c = &quot;Reverse&quot;,-1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT base amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <description>altextid__c</description>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_apdocno__c</fullName>
        <formula>rstkf__syvattxn_apinvdist__r.rstkf__apinvdist_apinvline__r.rstkf__apinvline_apinvtxn__r.rstkf__apinvtxn_docno__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AP Document Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_apinvdist__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>syvattxn_apinvdist__c</description>
        <label>Payables Invoice Distribution</label>
        <referenceTo>rstkf__apinvdist__c</referenceTo>
        <relationshipLabel>VAT Transaction</relationshipLabel>
        <relationshipName>syvattxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_apinvline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Payables Transaction Line</description>
        <label>Payables Transaction Line</label>
        <referenceTo>rstkf__apinvline__c</referenceTo>
        <relationshipLabel>VAT Transaction</relationshipLabel>
        <relationshipName>syvattxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_aptranid__c</fullName>
        <formula>rstkf__syvattxn_apinvdist__r.rstkf__apinvdist_apinvline__r.rstkf__apinvline_apinvtxn__r.rstkf__apinvtxn_tranid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AP Transaction ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_ardocno__c</fullName>
        <formula>rstkf__syvattxn_arinvdist__r.rstkf__arinvdist_arinvtxn__r.rstkf__arinvtxn_docno__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AR Document Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_arinvdist__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>syvattxn_arinvdist__c</description>
        <label>Receivables Invoice Distribution</label>
        <referenceTo>rstkf__arinvdist__c</referenceTo>
        <relationshipLabel>VAT Transaction</relationshipLabel>
        <relationshipName>syvattxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_arinvtxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Receivable Transaction</description>
        <label>Receivable Transaction</label>
        <referenceTo>rstkf__arinvtxn__c</referenceTo>
        <relationshipLabel>VAT Transaction</relationshipLabel>
        <relationshipName>syvattxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_artranid__c</fullName>
        <formula>rstkf__syvattxn_arinvdist__r.rstkf__arinvdist_arinvtxn__r.rstkf__arinvtxn_tranid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AR Transaction ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_fyear__c</fullName>
        <formula>TEXT(rstkf__syvattxn_year__c)</formula>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_glacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>VAT Account</description>
        <inlineHelpText>VAT Account</inlineHelpText>
        <label>VAT Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>VAT Transaction</relationshipLabel>
        <relationshipName>VAT_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company</description>
        <inlineHelpText>Company</inlineHelpText>
        <label>Financial Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>VAT Transaction</relationshipLabel>
        <relationshipName>VAT_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_gljd__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>syvattxn_gljd__c</description>
        <label>Journal Entry Detail</label>
        <referenceTo>rstkf__gljd__c</referenceTo>
        <relationshipLabel>VAT Transaction</relationshipLabel>
        <relationshipName>syvattxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_gltxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>syvattxn_gltxn__c</description>
        <label>GL Transaction</label>
        <referenceTo>rstkf__gltxn__c</referenceTo>
        <relationshipLabel>VAT Transaction</relationshipLabel>
        <relationshipName>syvattxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_jenumber__c</fullName>
        <formula>rstkf__syvattxn_gljd__r.rstkf__gljd_gljh__r.rstkf__gljh_number__c</formula>
        <label>JE Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_period__c</fullName>
        <description>syvattxn_period__c</description>
        <label>Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_soinvline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales Invoice Line</description>
        <label>Sales Invoice Line</label>
        <referenceTo>rstk__soinvline__c</referenceTo>
        <relationshipLabel>VAT Transaction</relationshipLabel>
        <relationshipName>syvattxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_sytxncst__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>syvattxn_sytxncst__c</description>
        <label>Cost Transaction</label>
        <referenceTo>rstk__sytxncst__c</referenceTo>
        <relationshipLabel>VAT Transaction</relationshipLabel>
        <relationshipName>syvattxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_taxdeclared__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tax Declared</description>
        <inlineHelpText>Tax Declared</inlineHelpText>
        <label>Tax Declared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_txnamount__c</fullName>
        <description>Transaction Amount</description>
        <inlineHelpText>Transaction Amount</inlineHelpText>
        <label>Transaction Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_txndate__c</fullName>
        <description>syvattxn_txndate__c</description>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_txnsource__c</fullName>
        <formula>rstkf__syvattxn_gltxn__r.rstkf__gltxn_source__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GL Transaction Source</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_vatamount__c</fullName>
        <formula>rstkf__syvattxn_gltxn__r.rstkf__gltxn_dramt__c + (0 -  rstkf__syvattxn_gltxn__r.rstkf__gltxn_cramt__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_vatclass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>VAT Class</description>
        <inlineHelpText>VAT Class</inlineHelpText>
        <label>VAT Class</label>
        <referenceTo>rstk__syvatclass__c</referenceTo>
        <relationshipLabel>VAT Transaction</relationshipLabel>
        <relationshipName>VAT_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_vatpct__c</fullName>
        <formula>IF( (rstkf__syvattxn_vatclass__r.rstk__syvatclass_intracomm__c == true ),  rstkf__syvattxn_vatclass__r.rstk__syvatclass_intracommrate__c * 100,  rstkf__syvattxn_vatclass__r.rstk__syvatclass_vatpct__c * 100 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_vattxntype__c</fullName>
        <formula>IF( !ISBLANK( rstkf__syvattxn_arinvdist__c ), &apos;Output&apos; , 
IF( !ISBLANK( rstkf__syvattxn_apinvdist__c), &apos;Input&apos; , 
IF( !ISBLANK( rstkf__syvattxn_gltxn__r.rstkf__gltxn_apinvtxn__c), &apos;Input&apos; , 
IF( !ISBLANK( rstkf__syvattxn_sytxncst__c), &apos;Input&apos; , 
&apos;Clearing&apos;) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT Transaction Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_year__c</fullName>
        <description>syvattxn_year__c</description>
        <label>Fiscal Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__syvattxn_zerovattxn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Zero VAT Transaction</description>
        <label>Zero VAT Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <description>triggeroptions__c</description>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>VAT Transaction</label>
    <listViews>
        <fullName>BF_Declared</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>rstkf__syvattxn_glcmp__c</columns>
        <columns>rstkf__syvattxn_glacct__c</columns>
        <columns>rstkf__syvattxn_year__c</columns>
        <columns>rstkf__syvattxn_period__c</columns>
        <columns>rstkf__syvattxn_txndate__c</columns>
        <columns>rstkf__syvattxn_txnamount__c</columns>
        <columns>rstkf__syvattxn_vatamount__c</columns>
        <columns>rstkf__syvattxn_vatclass__c</columns>
        <columns>rstkf__syvattxn_vatpct__c</columns>
        <columns>rstkf__syvattxn_vattxntype__c</columns>
        <columns>rstkf__syvattxn_sytxncst__c</columns>
        <columns>rstkf__syvattxn_txnsource__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BF_VAT_Declaration__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Declared</label>
    </listViews>
    <listViews>
        <fullName>BF_ToBe_Declared</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>rstkf__syvattxn_glcmp__c</columns>
        <columns>rstkf__syvattxn_glacct__c</columns>
        <columns>rstkf__syvattxn_year__c</columns>
        <columns>rstkf__syvattxn_period__c</columns>
        <columns>rstkf__syvattxn_txndate__c</columns>
        <columns>rstkf__syvattxn_txnamount__c</columns>
        <columns>rstkf__syvattxn_vatamount__c</columns>
        <columns>rstkf__syvattxn_vatclass__c</columns>
        <columns>rstkf__syvattxn_vatpct__c</columns>
        <columns>rstkf__syvattxn_vattxntype__c</columns>
        <columns>rstkf__syvattxn_sytxncst__c</columns>
        <columns>rstkf__syvattxn_txnsource__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BF_VAT_Declaration__c</field>
            <operation>equals</operation>
        </filters>
        <label>To be Declared</label>
    </listViews>
    <listViews>
        <fullName>alljkhj</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>rstkf__syvattxn_sytxncst__c</columns>
        <columns>rstkf__syvattxn_period__c</columns>
        <columns>rstkf__syvattxn_fyear__c</columns>
        <columns>rstkf__syvattxn_year__c</columns>
        <columns>rstkf__syvattxn_gltxn__c</columns>
        <columns>rstkf__syvattxn_gljd__c</columns>
        <columns>rstkf__syvattxn_apinvdist__c</columns>
        <columns>rstkf__syvattxn_arinvdist__c</columns>
        <columns>rstkf__syvattxn_txndate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>alljkhj</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__All1</fullName>
        <columns>rstkf__syvattxn_taxdeclared__c</columns>
        <columns>NAME</columns>
        <columns>rstkf__syvattxn_glcmp__c</columns>
        <columns>rstkf__syvattxn_glacct__c</columns>
        <columns>rstkf__syvattxn_year__c</columns>
        <columns>rstkf__syvattxn_period__c</columns>
        <columns>rstkf__syvattxn_txndate__c</columns>
        <columns>rstkf__syvattxn_txnamount__c</columns>
        <columns>rstkf__syvattxn_vatamount__c</columns>
        <columns>rstkf__syvattxn_vatclass__c</columns>
        <columns>rstkf__syvattxn_vatpct__c</columns>
        <columns>rstkf__syvattxn_vattxntype__c</columns>
        <columns>rstkf__syvattxn_sytxncst__c</columns>
        <columns>rstkf__syvattxn_gljd__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__all</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>rstkf__syvattxn_sytxncst__c</columns>
        <columns>rstkf__syvattxn_year__c</columns>
        <columns>rstkf__syvattxn_gltxn__c</columns>
        <columns>rstkf__syvattxn_jenumber__c</columns>
        <columns>rstkf__syvattxn_vatpct__c</columns>
        <columns>rstkf__syvattxn_glacct__c</columns>
        <columns>rstkf__syvattxn_vatamount__c</columns>
        <columns>rstkf__syvattxn_vatclass__c</columns>
        <columns>rstkf__syvattxn_vattxntype__c</columns>
        <columns>rstkf__syvattxn_zerovattxn__c</columns>
        <columns>rstkf__syvattxn_gljd__c</columns>
        <columns>rstkf__syvattxn_txndate__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>all</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Vat Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VAT Transaction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>